refactor: centralize attribute validation and add cache support
Extract attribute validation logic into AttributeService with new
validateItemAttributes/validateSkuAttributes methods. Add
AttributeCacheManager for Caffeine-based attribute caching and
AttributeConverter for DTO conversion.