@@ -17,6 +17,8 @@ import com.example.onlinestore.mapper.AttributeValueMapper;
 import com.example.onlinestore.mapper.ItemAttributeRelationMapper;
 import com.example.onlinestore.service.AttributeService;
 import com.example.onlinestore.utils.CommonUtils;
+import com.example.onlinestore.cache.AttributeCacheManager;
+import com.example.onlinestore.dto.converter.AttributeConverter;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
@@ -30,7 +32,6 @@ import org.springframework.transaction.support.TransactionSynchronizationManager
 
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
@@ -40,32 +41,29 @@ public class AttributeServiceImpl implements AttributeService {
 
     private static final Logger logger = LoggerFactory.getLogger(AttributeServiceImpl.class);
 
-    private final Map<Long, Attribute> attributeCache = new ConcurrentHashMap<>();
-    private final Map<Long, AttributeValue> attributeValueCache = new ConcurrentHashMap<>();
-    private final Map<Long, List<AttributeValue>> valuesByAttributeIdCache = new ConcurrentHashMap<>();
-
     private final AttributeMapper attributeMapper;
     private final AttributeValueMapper attributeValueMapper;
     private final ItemAttributeRelationMapper itemAttributeRelationMapper;
+    private final AttributeCacheManager cacheManager;
+    private final AttributeConverter converter;
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public Attribute createAttribute(@NotNull @Valid CreateAttributeRequest request) {
         // 校验名称是否重复
-        String name = request.getName();
-        if (attributeMapper.findByName(name) != null) {
+        if (attributeMapper.findByName(request.getName()) != null) {
             throw new BizException(ErrorCode.ATTRIBUTE_NAME_DUPLICATED, request.getName());
         }
         LocalDateTime now = LocalDateTime.now();
-        AttributeEntity attributeEntity = getAttributeEntity(request, name, now);
+        AttributeEntity attributeEntity = converter.toEntity(request, now);
         int effectRows = attributeMapper.insert(attributeEntity);
         if (effectRows != 1) {
             logger.error("insert attribute failed. because effect rows is 0. attributeName:{}", request.getName());
             throw new BizException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
 
-        Attribute attribute = convertToAttribute(attributeEntity);
-        attributeCache.put(attributeEntity.getId(), attribute);
+        Attribute attribute = converter.toAttribute(attributeEntity);
+        afterCommit(() -> cacheManager.putAttribute(attribute));
         return attribute;
     }
 
@@ -92,7 +90,7 @@ public class AttributeServiceImpl implements AttributeService {
             logger.error("update attribute failed. because effect rows is 0. attributeName:{}", request.getName());
             throw new BizException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
-        attributeCache.remove(id);
+        afterCommit(() -> cacheManager.invalidateAttribute(id));
     }
 
     @Override
@@ -118,23 +116,16 @@ public class AttributeServiceImpl implements AttributeService {
 
         attributeValueMapper.deleteByAttributeId(id);
 
-        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
-            @Override
-            public void afterCommit() {
-                attributeCache.remove(id);
-                attributeValueCache.values().removeIf(v -> Objects.equals(v.getAttributeId(), id));
-                valuesByAttributeIdCache.remove(id);
-            }
-        });
+        afterCommit(() -> cacheManager.invalidateAllByAttributeId(id));
     }
 
     @Override
     @Transactional(readOnly = true)
     public Attribute getAttributeByIdWithValues(@NotNull Long id) {
-        Attribute attribute = getAttributeById(id);
+        Attribute cached = getAttributeById(id);
+        Attribute attribute = converter.copyAttribute(cached);
         if (attribute.getInputType() == AttributeInputType.SINGLE_SELECT || attribute.getInputType() == AttributeInputType.MULTI_SELECT) {
-            List<AttributeValue> values = findAllAttributeValuesByAttributeId(id);
-            attribute.setValues(values);
+            attribute.setValues(findAllAttributeValuesByAttributeId(id));
         }
         return attribute;
     }
@@ -142,99 +133,60 @@ public class AttributeServiceImpl implements AttributeService {
     @Override
     @Transactional(readOnly = true)
     public Attribute getAttributeById(@NotNull Long id) {
-        Attribute cached = attributeCache.get(id);
-        if (cached != null) {
-            return cached;
-        }
-
-        AttributeEntity attributeEntity = attributeMapper.findById(id);
-        if (attributeEntity == null) {
-            logger.error("attribute not found, id: {}, name:{}", id);
-            throw new BizException(ErrorCode.ATTRIBUTE_NOT_FOUND);
-        }
-
-        Attribute attribute = convertToAttribute(attributeEntity);
-        attributeCache.put(id, attribute);
-        return attribute;
+        return cacheManager.getOrLoadAttribute(id, key -> {
+            AttributeEntity entity = attributeMapper.findById(key);
+            if (entity == null) {
+                logger.error("attribute not found, id: {}", key);
+                throw new BizException(ErrorCode.ATTRIBUTE_NOT_FOUND);
+            }
+            return converter.toAttribute(entity);
+        });
     }
 
     @Override
     @Transactional(readOnly = true)
     public List<AttributeValue> findAllAttributeValuesByAttributeId(Long attributeId) {
-        List<AttributeValue> cached = valuesByAttributeIdCache.get(attributeId);
-        if (cached != null) {
-            return cached;
-        }
-
-        List<AttributeValueEntity> values = attributeValueMapper.findAllAttributeValuesByAttributeId(attributeId);
-        if (CollectionUtils.isEmpty(values)) {
-            valuesByAttributeIdCache.put(attributeId, Collections.emptyList());
-            return Collections.emptyList();
-        }
-        List<AttributeValue> result = values.stream().map(entity -> {
-            AttributeValue av = convertToAttributeValue(entity);
-            attributeValueCache.put(entity.getId(), av);
-            return av;
-        }).toList();
-        valuesByAttributeIdCache.put(attributeId, result);
-        return result;
+        return cacheManager.getOrLoadValuesByAttributeId(attributeId, key -> {
+            List<AttributeValueEntity> values = attributeValueMapper.findAllAttributeValuesByAttributeId(key);
+            if (CollectionUtils.isEmpty(values)) {
+                return Collections.emptyList();
+            }
+            return values.stream()
+                    .map(converter::toAttributeValue)
+                    .toList();
+        });
     }
 
     @Override
     @Transactional(readOnly = true)
     public AttributeValue getAttributeValueById(@NotNull Long id) {
-        AttributeValueEntity attributeValueEntity = attributeValueMapper.findById(id);
-        if (attributeValueEntity != null) {
-            return convertToAttributeValue(attributeValueEntity);
-        }
-        logger.error("attribute value not found, id: {}", id);
-        throw new BizException(ErrorCode.ATTRIBUTE_VALUE_NOT_FOUND);
+        return cacheManager.getOrLoadAttributeValue(id, key -> {
+            AttributeValueEntity entity = attributeValueMapper.findById(key);
+            if (entity == null) {
+                logger.error("attribute value not found, id: {}", key);
+                throw new BizException(ErrorCode.ATTRIBUTE_VALUE_NOT_FOUND);
+            }
+            return converter.toAttributeValue(entity);
+        });
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void ensureItemAttributes(@NotNull Long itemId, @NotNull Long skuId, @NotNull @Valid List<ItemAttributeRequest> attributes) {
-
         List<ItemAttributeRelationEntity> relationEntities = itemAttributeRelationMapper.findByItemIdAndSkuId(itemId, skuId);
 
-        List<ItemAttributeRelationEntity> newRelations;
-
-        LocalDateTime now = LocalDateTime.now();
-        if (CollectionUtils.isEmpty(relationEntities)) {
-            newRelations = attributes.stream().map(attribute -> {
-                ItemAttributeRelationEntity relationEntity = new ItemAttributeRelationEntity();
-                relationEntity.setItemId(itemId);
-                relationEntity.setSkuId(skuId);
-                relationEntity.setAttributeId(attribute.getAttributeId());
-                relationEntity.setValueId(attribute.getAttributeValueId());
-                relationEntity.setInputValue(attribute.getValue());
-                relationEntity.setCreatedAt(now);
-                relationEntity.setUpdatedAt(now);
-                return relationEntity;
-            }).toList();
-        } else {
-            List<Long> curAttributeIds = relationEntities.stream().map(ItemAttributeRelationEntity::getAttributeId).collect(Collectors.toList());
-
+        if (CollectionUtils.isNotEmpty(relationEntities)) {
+            List<Long> curAttributeIds = relationEntities.stream()
+                    .map(ItemAttributeRelationEntity::getAttributeId)
+                    .collect(Collectors.toList());
             int effectRows = itemAttributeRelationMapper.deleteByItemIdAndAttributeIds(itemId, curAttributeIds);
             if (effectRows != curAttributeIds.size()) {
                 logger.error("delete item attribute relations failed. because effect rows is {}", effectRows);
                 throw new BizException(ErrorCode.INTERNAL_SERVER_ERROR);
             }
-
-            newRelations = attributes.stream().map(attribute -> {
-                ItemAttributeRelationEntity relationEntity = new ItemAttributeRelationEntity();
-                relationEntity.setItemId(itemId);
-                relationEntity.setSkuId(skuId);
-                relationEntity.setAttributeId(attribute.getAttributeId());
-                relationEntity.setValueId(attribute.getAttributeValueId());
-                relationEntity.setInputValue(attribute.getValue());
-                relationEntity.setCreatedAt(now);
-                relationEntity.setUpdatedAt(now);
-                return relationEntity;
-            }).collect(Collectors.toList());
-
         }
 
+        List<ItemAttributeRelationEntity> newRelations = converter.toRelationEntities(itemId, skuId, attributes);
         if (CollectionUtils.isEmpty(newRelations)) {
             logger.info("no new attribute relations to insert, itemId: {}", itemId);
             return;
@@ -243,8 +195,6 @@ public class AttributeServiceImpl implements AttributeService {
             logger.error("insert item attribute relations failed. because effect rows is {}", newRelations.size());
             throw new BizException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
-
-
     }
 
     @Override
@@ -254,27 +204,11 @@ public class AttributeServiceImpl implements AttributeService {
             return Collections.emptyList();
         }
 
-        List<Attribute> result = new ArrayList<>(ids.size());
-        List<Long> missedIds = new ArrayList<>();
-        for (Long id : ids) {
-            Attribute cached = attributeCache.get(id);
-            if (cached != null) {
-                result.add(cached);
-            } else {
-                missedIds.add(id);
-            }
-        }
-
-        if (!missedIds.isEmpty()) {
-            List<AttributeEntity> entities = attributeMapper.findByIds(missedIds);
-            for (AttributeEntity entity : entities) {
-                Attribute attr = convertToAttribute(entity);
-                attributeCache.put(entity.getId(), attr);
-                result.add(attr);
-            }
-        }
-
-        return result;
+        return cacheManager.batchGetAttributes(ids, missedIds ->
+                attributeMapper.findByIds(missedIds).stream()
+                        .map(converter::toAttribute)
+                        .toList()
+        );
     }
 
     @Override
@@ -284,35 +218,11 @@ public class AttributeServiceImpl implements AttributeService {
             return Collections.emptyMap();
         }
 
-        Map<Long, List<AttributeValue>> result = new HashMap<>(attributeIds.size());
-        List<Long> missedIds = new ArrayList<>();
-        for (Long attrId : attributeIds) {
-            List<AttributeValue> cached = valuesByAttributeIdCache.get(attrId);
-            if (cached != null) {
-                result.put(attrId, cached);
-            } else {
-                missedIds.add(attrId);
-            }
-        }
-
-        if (!missedIds.isEmpty()) {
-            List<AttributeValueEntity> entities = attributeValueMapper.findByAttributeIds(missedIds);
-            Map<Long, List<AttributeValue>> dbResults = entities.stream()
-                    .map(entity -> {
-                        AttributeValue av = convertToAttributeValue(entity);
-                        attributeValueCache.put(entity.getId(), av);
-                        return av;
-                    })
-                    .collect(Collectors.groupingBy(AttributeValue::getAttributeId));
-
-            for (Long attrId : missedIds) {
-                List<AttributeValue> values = dbResults.getOrDefault(attrId, Collections.emptyList());
-                valuesByAttributeIdCache.put(attrId, values);
-                result.put(attrId, values);
-            }
-        }
-
-        return result;
+        return cacheManager.batchGetValuesByAttributeIds(attributeIds, missedIds ->
+                attributeValueMapper.findByAttributeIds(missedIds).stream()
+                        .map(converter::toAttributeValue)
+                        .collect(Collectors.groupingBy(AttributeValue::getAttributeId))
+        );
     }
 
     @Override
@@ -322,63 +232,76 @@ public class AttributeServiceImpl implements AttributeService {
             return Collections.emptyMap();
         }
 
-        Map<Long, AttributeValue> result = new HashMap<>(ids.size());
-        List<Long> missedIds = new ArrayList<>();
-        for (Long id : ids) {
-            AttributeValue cached = attributeValueCache.get(id);
-            if (cached != null) {
-                result.put(id, cached);
+        return cacheManager.batchGetAttributeValues(ids, missedIds ->
+                attributeValueMapper.findByIds(missedIds).stream()
+                        .map(converter::toAttributeValue)
+                        .toList()
+        );
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public void validateSkuAttributes(@NotNull @Valid List<ItemAttributeRequest> attributes) {
+        List<Long> attributeIds = attributes.stream().map(ItemAttributeRequest::getAttributeId).toList();
+        List<Long> valueIds = attributes.stream()
+                .map(ItemAttributeRequest::getAttributeValueId)
+                .filter(Objects::nonNull).toList();
+
+        Map<Long, Attribute> attributeMap = getAttributesByIds(attributeIds).stream()
+                .collect(Collectors.toMap(Attribute::getId, Function.identity()));
+        Map<Long, AttributeValue> valueMap = getAttributeValuesByIds(valueIds);
+
+        for (ItemAttributeRequest attributeRequest : attributes) {
+            Attribute attribute = attributeMap.get(attributeRequest.getAttributeId());
+            if (attribute == null) {
+                throw new BizException(ErrorCode.ATTRIBUTE_NOT_FOUND, attributeRequest.getAttributeId());
+            }
+            if (attribute.getAttributeType() != AttributeType.SKU) {
+                throw new BizException(ErrorCode.ATTRIBUTE_TYPE_NOT_SKU, attributeRequest.getAttributeId());
+            }
+            if (attribute.getInputType() != AttributeInputType.SINGLE_SELECT && attribute.getInputType() != AttributeInputType.MULTI_SELECT) {
+                throw new BizException(ErrorCode.SKU_ATTRIBUTE_INPUT_TYPE_INVALID, attributeRequest.getAttributeId());
+            }
+            if (attributeRequest.getAttributeValueId() == null) {
+                throw new BizException(ErrorCode.SKU_ATTRIBUTE_VALUE_EMPTY, attributeRequest.getAttributeId());
+            }
+            if (!valueMap.containsKey(attributeRequest.getAttributeValueId())) {
+                throw new BizException(ErrorCode.ATTRIBUTE_VALUE_NOT_FOUND, attributeRequest.getAttributeValueId());
+            }
+        }
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public void validateItemAttributes(@NotNull @Valid List<ItemAttributeRequest> attributes) {
+        List<Long> attributeIds = attributes.stream().map(ItemAttributeRequest::getAttributeId).toList();
+        Map<Long, Attribute> attributeMap = getAttributesByIds(attributeIds).stream()
+                .collect(Collectors.toMap(Attribute::getId, Function.identity()));
+
+        for (ItemAttributeRequest attributeRequest : attributes) {
+            Attribute attribute = attributeMap.get(attributeRequest.getAttributeId());
+            if (attribute == null) {
+                throw new BizException(ErrorCode.ATTRIBUTE_NOT_FOUND, attributeRequest.getAttributeId());
+            }
+            if (attribute.getInputType() == AttributeInputType.SINGLE_SELECT
+                    || attribute.getInputType() == AttributeInputType.MULTI_SELECT) {
+                if (attributeRequest.getAttributeValueId() == null) {
+                    throw new BizException(ErrorCode.ITEM_ATTRIBUTE_VALUE_IS_EMPTY, attributeRequest.getAttributeId());
+                }
             } else {
-                missedIds.add(id);
+                if (org.apache.commons.lang3.StringUtils.isBlank(attributeRequest.getValue())) {
+                    throw new BizException(ErrorCode.ITEM_ATTRIBUTE_VALUE_IS_EMPTY, attributeRequest.getAttributeId());
+                }
             }
         }
+    }
 
-        if (!missedIds.isEmpty()) {
-            List<AttributeValueEntity> entities = attributeValueMapper.findByIds(missedIds);
-            for (AttributeValueEntity entity : entities) {
-                AttributeValue av = convertToAttributeValue(entity);
-                attributeValueCache.put(entity.getId(), av);
-                result.put(entity.getId(), av);
+    private void afterCommit(Runnable action) {
+        TransactionSynchronizationManager.registerSynchronization(new TransactionSynchronization() {
+            @Override
+            public void afterCommit() {
+                action.run();
             }
-        }
-
-        return result;
-    }
-
-    private AttributeEntity getAttributeEntity(CreateAttributeRequest request, String name, LocalDateTime now) {
-        AttributeEntity attributeEntity = new AttributeEntity();
-        attributeEntity.setName(name);
-        attributeEntity.setAttributeType(request.getAttributeType());
-        attributeEntity.setInputType(request.getInputType());
-        attributeEntity.setRequired(request.getRequired());
-        attributeEntity.setSearchable(request.getSearchable());
-        attributeEntity.setSortScore(request.getSortScore());
-        attributeEntity.setVisible(request.getVisible());
-
-        attributeEntity.setCreatedAt(now);
-        attributeEntity.setUpdatedAt(now);
-        return attributeEntity;
-    }
-
-    private Attribute convertToAttribute(AttributeEntity attributeEntity) {
-        Attribute attribute = new Attribute();
-        attribute.setId(attributeEntity.getId());
-        attribute.setName(attributeEntity.getName());
-        attribute.setAttributeType(AttributeType.valueOf(attributeEntity.getAttributeType()));
-        attribute.setInputType(AttributeInputType.valueOf(attributeEntity.getInputType()));
-        attribute.setRequired(attributeEntity.getRequired());
-        attribute.setSearchable(attributeEntity.getSearchable());
-        attribute.setSortScore(attributeEntity.getSortScore());
-        attribute.setVisible(attributeEntity.getVisible());
-        return attribute;
-    }
-
-    private AttributeValue convertToAttributeValue(AttributeValueEntity attributeValueEntity) {
-        AttributeValue attributeValue = new AttributeValue();
-        attributeValue.setId(attributeValueEntity.getId());
-        attributeValue.setAttributeId(attributeValueEntity.getAttributeId());
-        attributeValue.setValue(attributeValueEntity.getValue());
-        attributeValue.setSortScore(attributeValueEntity.getSortScore());
-        return attributeValue;
+        });
     }
 }
